wal-macros/tests/html_macro_tests/for/for_loop_fail.rs
use wal_macros::html;

include!("../utils/non_display_struct.rs");

fn main() {
    html! { for };
    html! { for () };
    html! { for {} };
    html! { for { () } };
    html! { for Vec::<()>::new() };
    html! { for { Vec::<NonDisplayStruct>::new() } };
}
